cmake_minimum_required(VERSION 3.10)
project(allegro_hand_ros)

set(CMAKE_CXX_STANDARD 11)

include_directories(allegro_hand_controllers/src)
include_directories(allegro_hand_driver/include)
include_directories(allegro_hand_driver/include/allegro_hand_driver)
include_directories(bhand)
include_directories(bhand/include)
include_directories(bhand/include/bhand)

add_executable(allegro_hand_ros
        allegro_hand/launch/allegro_hand.launch
        allegro_hand/launch/allegro_viz.launch
        allegro_hand/launch/test.launch
        allegro_hand/scripts/detect_pcan.py
        allegro_hand/src/allegro_hand/test/__init__.py
        allegro_hand/src/allegro_hand/test/test_allegro_lib.py
        allegro_hand/src/allegro_hand/__init__.py
        allegro_hand/src/allegro_hand/example_allegro_lib.py
        allegro_hand/src/allegro_hand/liballegro.py
        allegro_hand/test/allegro_launch.test
        allegro_hand/test/allegro_launch_test.py
        allegro_hand/CMakeLists.txt
        allegro_hand/package.xml
        allegro_hand/setup.py
        allegro_hand_controllers/src/allegro_node.cpp
        allegro_hand_controllers/src/allegro_node.h
        allegro_hand_controllers/src/allegro_node_grasp.cpp
        allegro_hand_controllers/src/allegro_node_grasp.h
        allegro_hand_controllers/src/allegro_node_pd.cpp
        allegro_hand_controllers/src/allegro_node_pd.h
        allegro_hand_controllers/src/allegro_node_sim.cpp
        allegro_hand_controllers/src/allegro_node_sim.h
        allegro_hand_controllers/src/allegro_node_torque.cpp
        allegro_hand_controllers/src/allegro_node_torque.h
        allegro_hand_controllers/src/allegro_node_velsat.cpp
        allegro_hand_controllers/src/allegro_node_velsat.h
        allegro_hand_controllers/CMakeLists.txt
        allegro_hand_controllers/package.xml
        allegro_hand_description/meshes/base_link.STL
        allegro_hand_description/meshes/base_link_left.STL
        allegro_hand_description/meshes/link_0.0.STL
        allegro_hand_description/meshes/link_1.0.STL
        allegro_hand_description/meshes/link_12.0_left.STL
        allegro_hand_description/meshes/link_12.0_right.STL
        allegro_hand_description/meshes/link_13.0.STL
        allegro_hand_description/meshes/link_14.0.STL
        allegro_hand_description/meshes/link_15.0.STL
        allegro_hand_description/meshes/link_15.0_tip.STL
        allegro_hand_description/meshes/link_2.0.STL
        allegro_hand_description/meshes/link_3.0.STL
        allegro_hand_description/meshes/link_3.0_tip.STL
        allegro_hand_description/meshes/link_4.0.STL
        allegro_hand_description/worlds/allegro.world
        allegro_hand_description/allegro_hand_config.rviz
        allegro_hand_description/allegro_hand_description_left.xacro
        allegro_hand_description/allegro_hand_description_right.xacro
        allegro_hand_description/CMakeLists.txt
        allegro_hand_description/package.xml
        allegro_hand_driver/include/allegro_hand_driver/allegroCANProtocol.h
        allegro_hand_driver/include/allegro_hand_driver/controlAllegroHand.h
        allegro_hand_driver/src/controlAllegroHand.cpp
        allegro_hand_keyboard/src/allegro_hand_keyboard.cpp
        allegro_hand_parameters/zero_files/zero_SAH01010002.yaml
        allegro_hand_parameters/zero_files/zero_SAH01020003.yaml
        allegro_hand_parameters/zero_files/zero_SAH01020004.yaml
        allegro_hand_parameters/zero_files/zero_SAH01020005.yaml
        allegro_hand_parameters/zero_files/zero_SAH01020006.yaml
        allegro_hand_parameters/zero_files/zero_SAH020AL011.yaml
        allegro_hand_parameters/zero_files/zero_SAH020AR007.yaml
        allegro_hand_parameters/zero_files/zero_SAH020AR008.yaml
        allegro_hand_parameters/zero_files/zero_SAH020AR009.yaml
        allegro_hand_parameters/zero_files/zero_SAH020AR010.yaml
        allegro_hand_parameters/zero_files/zero_SAH020AR011.yaml
        allegro_hand_parameters/zero_files/zero_SAH020BL016.yaml
        allegro_hand_parameters/zero_files/zero_SAH020BR012.yaml
        allegro_hand_parameters/zero_files/zero_SAH020BR013.yaml
        allegro_hand_parameters/zero_files/zero_SAH020BR014.yaml
        allegro_hand_parameters/zero_files/zero_SAH020BR015.yaml
        allegro_hand_parameters/zero_files/zero_SAH020CR017.yaml
        allegro_hand_parameters/zero_files/zero_SAH020CR018.yaml
        allegro_hand_parameters/zero_files/zero_SAH020CR019.yaml
        allegro_hand_parameters/zero_files/zero_SAH020CR020.yaml
        allegro_hand_parameters/zero_files/zero_SAH030C033R.yaml
        allegro_hand_parameters/CMakeLists.txt
        allegro_hand_parameters/gains_pd.yaml
        allegro_hand_parameters/gains_velSat.yaml
        allegro_hand_parameters/initial_position.yaml
        allegro_hand_parameters/package.xml
        allegro_hand_parameters/zero.yaml
        bhand/include/bhand/BHand.h
        bhand/include/bhand/BHandDef.h
        epfl_allegro_launchers/launch/epfl_left.launch
        epfl_allegro_launchers/launch/epfl_right.launch
        epfl_allegro_launchers/CMakeLists.txt
        epfl_allegro_launchers/package.xml
        epfl_allegro_launchers/README.md
        README.md)
